@@ -523,7 +523,6 @@ libspectrum_identify_file_raw( libspectrum_id_t *type, const char *filename,
       { LIBSPECTRUM_ID_TAPE_TZX,      "tzx", 3, "ZXTape!",	    0, 7, 4 },
       { LIBSPECTRUM_ID_TAPE_WARAJEVO, "tap", 2, "\xff\xff\xff\xff", 8, 4, 2 },
 
-      { LIBSPECTRUM_ID_DISK_DSK,      "dsk", 3, NULL,		    0, 0, 0 },
       { LIBSPECTRUM_ID_DISK_SCL,      "scl", 3, "SINCLAIR",         0, 8, 4 },
       { LIBSPECTRUM_ID_DISK_TRD,      "trd", 3, NULL,		    0, 0, 0 },
 
@@ -539,6 +538,14 @@ libspectrum_identify_file_raw( libspectrum_id_t *type, const char *filename,
 
       { LIBSPECTRUM_ID_DISK_MGT,      "mgt", 3, NULL,		    0, 0, 0 },
       { LIBSPECTRUM_ID_DISK_IMG,      "img", 3, NULL,		    0, 0, 0 },
+
+      { LIBSPECTRUM_ID_DISK_UDI,      "udi", 3, "UDI!",		    0, 4, 4 },
+      { LIBSPECTRUM_ID_DISK_ECPC,     "dsk", 3, "EXTENDED CPC DSK File\r\nDisk-Info\r\n", 0, 34, 4 },
+      { LIBSPECTRUM_ID_DISK_CPC,      "dsk", 3, "MV - CPCEMU Disk-File\r\nDisk-Info\r\n", 0, 34, 4 },
+      { LIBSPECTRUM_ID_DISK_FDI,      "fdi", 3, "FDI",              0, 3, 4 },
+      { LIBSPECTRUM_ID_DISK_SAD,      "sad", 3, "Aley's disk backup", 0, 18, 4 },
+      { LIBSPECTRUM_ID_DISK_TD0,      "td0", 3, "TD",               0, 2, 4 },
+      { LIBSPECTRUM_ID_DISK_TD0,      "td0", 3, "td",               0, 2, 4 },
 
       { -1, NULL, 0, NULL, 0, 0, 0 }, /* End marker */
 
@@ -654,6 +661,8 @@ libspectrum_identify_class( libspectrum_class_t *libspectrum_class,
     *libspectrum_class = LIBSPECTRUM_CLASS_COMPRESSED; return 0;
 
   case LIBSPECTRUM_ID_DISK_DSK:
+  case LIBSPECTRUM_ID_DISK_CPC:
+  case LIBSPECTRUM_ID_DISK_ECPC:
     *libspectrum_class = LIBSPECTRUM_CLASS_DISK_PLUS3; return 0;
 
   case LIBSPECTRUM_ID_DISK_IMG:
@@ -695,6 +704,12 @@ libspectrum_identify_class( libspectrum_class_t *libspectrum_class,
 
   case LIBSPECTRUM_ID_CARTRIDGE_IF2:
     *libspectrum_class = LIBSPECTRUM_CLASS_CARTRIDGE_IF2; return 0;
+
+  case LIBSPECTRUM_ID_DISK_UDI:
+  case LIBSPECTRUM_ID_DISK_FDI:
+  case LIBSPECTRUM_ID_DISK_SAD:
+  case LIBSPECTRUM_ID_DISK_TD0:
+    *libspectrum_class = LIBSPECTRUM_CLASS_DISK_GENERIC; return 0;
 
   }
 
